--- a/JUSEmptyViewController/JUSEmptyViewController/Empty View/JUSDefaultEmptyViewController.xib
+++ b/JUSEmptyViewController/JUSEmptyViewController/Empty View/JUSDefaultEmptyViewController.xib
@@ -6,8 +6,9 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="JUSDefaultEmptyViewController">
             <connections>
-                <outlet property="actionButton" destination="A1T-l5-Azh" id="kcP-S4-Rbj"/>
-                <outlet property="backgroundImageView" destination="0In-fs-Vbm" id="gby-CF-CMo"/>
+                <outlet property="actionButton" destination="vW9-Eh-cD2" id="41Z-dX-hih"/>
+                <outlet property="backgroundImageView" destination="0In-fs-Vbm" id="V6r-hg-gsD"/>
+                <outlet property="contentView" destination="QJL-7b-vgC" id="5Xp-NE-gMx"/>
                 <outlet property="imageView" destination="Ndb-Id-vGB" id="8r6-BL-8dT"/>
                 <outlet property="subtitleLabel" destination="NVs-Zu-Eto" id="Qhw-g7-T3V"/>
                 <outlet property="titleLabel" destination="DMX-U3-m7Y" id="W9I-Ey-TUV"/>
@@ -15,29 +16,32 @@
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="JUSEmptyView">
             <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" ambiguous="YES" translatesAutoresizingMaskIntoConstraints="NO" id="QJL-7b-vgC">
-                    <rect key="frame" x="112" y="93" width="256" height="292.5"/>
+                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0In-fs-Vbm">
+                    <rect key="frame" x="-50" y="-50" width="580" height="580"/>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QJL-7b-vgC">
+                    <rect key="frame" x="112" y="94" width="256" height="292"/>
                     <subviews>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="Empty View" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DMX-U3-m7Y">
-                            <rect key="frame" x="81" y="168" width="93" height="22"/>
-                            <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="248" text="Empty View" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DMX-U3-m7Y">
+                            <rect key="frame" x="20" y="168" width="216" height="32"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                             <color key="textColor" red="0.18654439377682402" green="0.18654439377682402" blue="0.18654439377682402" alpha="1" colorSpace="calibratedRGB"/>
                             <nil key="highlightedColor"/>
                         </label>
-                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="This is a empty view." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="216" translatesAutoresizingMaskIntoConstraints="NO" id="NVs-Zu-Eto">
-                            <rect key="frame" x="20" y="199" width="216" height="20"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                        <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="This is a empty view." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" preferredMaxLayoutWidth="216" translatesAutoresizingMaskIntoConstraints="NO" id="NVs-Zu-Eto">
+                            <rect key="frame" x="20" y="209" width="216" height="22"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                             <nil key="highlightedColor"/>
                             <variation key="heightClass=regular" fixedFrame="YES">
                                 <rect key="frame" x="160" y="309" width="159" height="21"/>
                             </variation>
-                            <variation key="widthClass=compact" fixedFrame="YES">
-                                <rect key="frame" x="80" y="229" width="159" height="21"/>
+                            <variation key="widthClass=compact" misplaced="YES">
+                                <rect key="frame" x="20" y="201" width="216" height="43"/>
                             </variation>
                             <variation key="heightClass=regular-widthClass=compact" fixedFrame="YES">
                                 <rect key="frame" x="80" y="309" width="159" height="21"/>
@@ -56,55 +60,50 @@
                                 <rect key="frame" x="31" y="6" width="256" height="256"/>
                             </variation>
                         </imageView>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="A1T-l5-Azh">
-                            <rect key="frame" x="100" y="236" width="55" height="44"/>
-                            <constraints>
-                                <constraint firstAttribute="height" constant="44" id="bMh-02-hz5"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" pointSize="18"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vW9-Eh-cD2">
+                            <rect key="frame" x="97" y="250" width="62" height="36"/>
+                            <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                             <state key="normal" title="Button">
                                 <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                             </state>
-                            <variation key="heightClass=regular" ambiguous="YES" misplaced="YES">
-                                <rect key="frame" x="216" y="364" width="46" height="30"/>
-                            </variation>
-                            <variation key="widthClass=compact" ambiguous="YES" misplaced="YES">
-                                <rect key="frame" x="136" y="284" width="46" height="30"/>
-                            </variation>
-                            <variation key="heightClass=regular-widthClass=compact" ambiguous="YES" misplaced="YES">
-                                <rect key="frame" x="136" y="364" width="46" height="30"/>
-                            </variation>
                             <connections>
-                                <action selector="actionButtonTapped:" destination="-1" eventType="touchUpInside" id="XaT-ZT-E1z"/>
+                                <action selector="actionButtonTapped:" destination="-1" eventType="touchUpInside" id="QrJ-3C-DBT"/>
                             </connections>
                         </button>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="centerX" secondItem="A1T-l5-Azh" secondAttribute="centerX" id="4VB-dR-NGw"/>
                         <constraint firstItem="DMX-U3-m7Y" firstAttribute="top" secondItem="Ndb-Id-vGB" secondAttribute="bottom" constant="20" id="63R-4p-yZ3"/>
+                        <constraint firstAttribute="centerX" secondItem="vW9-Eh-cD2" secondAttribute="centerX" id="8Cy-ZN-91r"/>
+                        <constraint firstItem="DMX-U3-m7Y" firstAttribute="leading" secondItem="QJL-7b-vgC" secondAttribute="leading" constant="20" id="8kX-rs-kpS"/>
                         <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="256" id="F6V-Av-efd"/>
                         <constraint firstItem="NVs-Zu-Eto" firstAttribute="top" secondItem="DMX-U3-m7Y" secondAttribute="bottom" constant="9" id="Fmg-up-4Z6"/>
                         <constraint firstAttribute="centerX" secondItem="NVs-Zu-Eto" secondAttribute="centerX" id="Gse-OQ-iH5"/>
-                        <constraint firstAttribute="bottom" secondItem="A1T-l5-Azh" secondAttribute="bottom" constant="12.5" id="bXk-7E-mjR"/>
+                        <constraint firstItem="vW9-Eh-cD2" firstAttribute="top" secondItem="NVs-Zu-Eto" secondAttribute="bottom" constant="19" id="INl-7o-0vc"/>
+                        <constraint firstItem="NVs-Zu-Eto" firstAttribute="leading" secondItem="QJL-7b-vgC" secondAttribute="leading" constant="20" id="RiR-0o-F6i"/>
+                        <constraint firstAttribute="bottom" secondItem="vW9-Eh-cD2" secondAttribute="bottom" constant="6" id="XQM-82-pj7"/>
                         <constraint firstItem="Ndb-Id-vGB" firstAttribute="top" secondItem="QJL-7b-vgC" secondAttribute="top" constant="20" id="cL2-Op-R3P"/>
+                        <constraint firstAttribute="trailing" secondItem="NVs-Zu-Eto" secondAttribute="trailing" constant="20" id="i6g-uv-H7h"/>
                         <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="292" id="lRC-Kg-kOS"/>
-                        <constraint firstItem="A1T-l5-Azh" firstAttribute="top" secondItem="NVs-Zu-Eto" secondAttribute="bottom" constant="17" id="qla-r7-esb"/>
                         <constraint firstAttribute="centerX" secondItem="Ndb-Id-vGB" secondAttribute="centerX" id="rsi-tn-IKV"/>
+                        <constraint firstAttribute="trailing" secondItem="DMX-U3-m7Y" secondAttribute="trailing" constant="20" id="xQc-89-gdW"/>
                         <constraint firstAttribute="centerX" secondItem="DMX-U3-m7Y" secondAttribute="centerX" id="ypm-xD-iMn"/>
                     </constraints>
+                    <variation key="widthClass=compact" misplaced="YES">
+                        <rect key="frame" x="32" y="83.5" width="256" height="313.5"/>
+                    </variation>
+                    <variation key="heightClass=compact-widthClass=compact" ambiguous="YES" misplaced="YES">
+                        <rect key="frame" x="112" y="13" width="256" height="292.5"/>
+                    </variation>
                 </view>
-                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="0In-fs-Vbm">
-                    <rect key="frame" x="0.0" y="0.0" width="480" height="480"/>
-                </imageView>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
             <constraints>
-                <constraint firstItem="0In-fs-Vbm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="02J-6c-KRy"/>
-                <constraint firstAttribute="bottom" secondItem="0In-fs-Vbm" secondAttribute="bottom" id="2DF-GD-PF8"/>
+                <constraint firstAttribute="bottom" secondItem="0In-fs-Vbm" secondAttribute="bottom" constant="-50" id="2DF-GD-PF8"/>
                 <constraint firstAttribute="centerX" secondItem="QJL-7b-vgC" secondAttribute="centerX" id="3v3-RG-gVA"/>
-                <constraint firstAttribute="trailing" secondItem="0In-fs-Vbm" secondAttribute="trailing" id="Zbz-U7-IK5"/>
+                <constraint firstItem="0In-fs-Vbm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="-50" id="B7m-vA-U7y"/>
+                <constraint firstAttribute="trailing" secondItem="0In-fs-Vbm" secondAttribute="trailing" constant="-50" id="Zbz-U7-IK5"/>
+                <constraint firstItem="0In-fs-Vbm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="-50" id="nOK-wG-Q2d"/>
                 <constraint firstAttribute="centerY" secondItem="QJL-7b-vgC" secondAttribute="centerY" id="oyi-lR-iRA"/>
-                <constraint firstItem="0In-fs-Vbm" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" id="wdg-4q-Yub"/>
             </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedOrientationMetrics key="simulatedOrientationMetrics" orientation="landscapeRight"/>
